# autoresearch-codex

./: .gitignore  README.md  pyproject.toml  run.py  setup.py  test_run.py
examples/: README.md
examples/chess_engine/: .gitignore  README.md  benchmark.py  config.toml  engine.py  program.md  test_benchmark.py
examples/maze_solver/: README.md  benchmark.py  config.toml  program.md  solver.py  test_benchmark.py  test_solver.py
