[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-autoresearch"
version = "0.1.0"
description = "A Codex-native autoresearch harness for git repositories."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex AutoResearch" }
]
dependencies = []

[project.scripts]
codex-autoresearch = "run:main"

[tool.setuptools]
py-modules = ["run"]
