[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evoloza"
version = "0.1.0"
description = "An improvement-loop harness for git repositories with Codex and Ollama backends."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Evoloza" }
]
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.scripts]
evoloza = "run:main"

[tool.setuptools]
py-modules = ["run"]
